test/files/neg/t10731.check
t10731.scala:3: error: stable identifier required, but C.this.eq found.
  val eq.a = 1
      ^
one error found
